# run-it-back

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  render.yaml
crates/core/: Cargo.toml
crates/core/src/: action.rs  board.rs  card.rs  error.rs  game.rs  lib.rs  omaha.rs  position.rs  range.rs  street.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql
crates/db/src/: drills.rs  hand_history.rs  lib.rs  models.rs  pool.rs  ranges.rs  solve_jobs.rs  solved_spots.rs  stats.rs  users.rs  weakness.rs
crates/drills/: Cargo.toml
crates/drills/src/: generator.rs  grading.rs  lib.rs
crates/evaluator/: Cargo.toml
crates/evaluator/examples/: bench_equity.rs  bench_eval.rs
crates/evaluator/src/: adapter.rs  equity.rs  handrank.rs  lib.rs  omaha.rs  showdown.rs
crates/parser/: Cargo.toml
crates/parser/src/: common.rs  detect.rs  lib.rs  model.rs  site_parser.rs  stats.rs
crates/parser/src/sites/: ggpoker.rs  mod.rs  poker888.rs  pokerstars.rs  wpn_family.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/routes/: auth.rs  drills.rs  hands.rs  mod.rs  ranges.rs  solve.rs
crates/solver/: Cargo.toml
crates/solver/examples/: bench_solve.rs  bench_solve_plo.rs  bench_turn_river.rs
crates/solver/src/: cfr.rs  engine.rs  hand_index.rs  lib.rs  library.rs  payoff.rs  pot.rs  request.rs  tree.rs
crates/worker/: Cargo.toml
crates/worker/src/: job.rs  lib.rs  pool.rs  processors.rs  seed.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: NavBar.tsx  OmahaStrategyList.tsx  PlayingCard.tsx  ProtectedRoute.tsx  RangeGrid.tsx
web/src/pages/: About.tsx  Dashboard.tsx  HandHistory.tsx  Login.tsx  RangeExplorer.tsx  Register.tsx  Trainer.tsx
web/src/store/: auth.tsx
web/src/styles/: global.css
