[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/evaluator",
    "crates/solver",
    "crates/parser",
    "crates/db",
    "crates/worker",
    "crates/drills",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Run It Back"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
rayon = "1.10"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
