[package]
name = "rib-parser"
version.workspace = true
edition.workspace = true
description = "Hand history parsing: site auto-detection plus per-site parsers (PokerStars, GGPoker, 888poker, PartyPoker, WPN/Bovada/ACR) into one canonical schema, and stat derivation (VPIP/PFR/3-bet/c-bet/...) from that schema."

[dependencies]
rib-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
